# bazel-python-example

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  conftest.py  pytest.ini  requirements.txt
.buildkite/: pipeline.yml
calculator/: BUILD.bazel  calculator.py  calculator_divide_test.py  calculator_modes_test.py  calculator_props_test.py  calculator_test.py
listutil/: BUILD.bazel  listutil.py  listutil_chunk_test.py  listutil_test.py
mathutil/: BUILD.bazel  mathutil.py  mathutil_prime_test.py  mathutil_test.py
stringutil/: BUILD.bazel  stringutil.py  stringutil_palindrome_test.py  stringutil_test.py
tools/: BUILD.bazel  pytest_main.py
