"""Bazel module definition for the example Python project."""

module(
    name = "bazel_python_example",
    version = "0.1.0",
)

# rules_python provides py_library, py_binary, and py_test rules.
bazel_dep(name = "rules_python", version = "0.34.0")

# Configure the Python toolchain (hermetic interpreter downloaded by Bazel).
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.11",
    # Allow running as root in CI/containers; harmless locally.
    ignore_root_user_error = True,
)

# pytest, so tests run the same way whether invoked by Bazel or bare `pytest`.
pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pip")
